; ModuleID = '/home/carl/AnghaBench/darwin-xnu/libsyscall/mach/extr_thread_act.c_thread_set_policy.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/libsyscall/mach/extr_thread_act.c_thread_set_policy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@KERN_SUCCESS = common dso_local global i64 0, align 8
@KERN_POLICY_STATIC = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @thread_set_policy(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5, i32 %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i64, align 8
  store i32 %0, i32* %8, align 4
  store i32 %1, i32* %9, align 4
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  store i32 %6, i32* %14, align 4
  %16 = load i32, i32* %8, align 4
  %17 = load i32, i32* %9, align 4
  %18 = load i32, i32* %10, align 4
  %19 = load i32, i32* %11, align 4
  %20 = load i32, i32* %12, align 4
  %21 = load i32, i32* %13, align 4
  %22 = load i32, i32* %14, align 4
  %23 = call i64 @_kernelrpc_thread_set_policy(i32 %16, i32 %17, i32 %18, i32 %19, i32 %20, i32 %21, i32 %22)
  store i64 %23, i64* %15, align 8
  %24 = load i64, i64* %15, align 8
  %25 = load i64, i64* @KERN_SUCCESS, align 8
  %26 = icmp eq i64 %24, %25
  br i1 %26, label %27, label %30

27:                                               ; preds = %7
  %28 = load i32, i32* %8, align 4
  %29 = call i32 @_pthread_clear_qos_tsd(i32 %28)
  br label %37

30:                                               ; preds = %7
  %31 = load i64, i64* %15, align 8
  %32 = load i64, i64* @KERN_POLICY_STATIC, align 8
  %33 = icmp eq i64 %31, %32
  br i1 %33, label %34, label %36

34:                                               ; preds = %30
  %35 = load i64, i64* @KERN_SUCCESS, align 8
  store i64 %35, i64* %15, align 8
  br label %36

36:                                               ; preds = %34, %30
  br label %37

37:                                               ; preds = %36, %27
  %38 = load i64, i64* %15, align 8
  ret i64 %38
}

declare dso_local i64 @_kernelrpc_thread_set_policy(i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @_pthread_clear_qos_tsd(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
